@@ -1,4 +1,5 @@
 readline.o: readline.c $(HDRS) $(ruby_headers) \
   $(hdrdir)/ruby/io.h \
   $(hdrdir)/ruby/encoding.h \
-  $(hdrdir)/ruby/oniguruma.h
+  $(hdrdir)/ruby/oniguruma.h \
+  $(hdrdir)/ruby/thread.h
